Corrected icon overlap on mobile

--- a/cart_tracker/cart_tracker.css
+++ b/cart_tracker/cart_tracker.css
@@ -23,7 +23,7 @@ button {
   padding: 0.8%;
   background-color: #2d2d2d;
   display: grid;
-  grid-template-columns: 30% 5% 10% 5% 15% 5% 20% 5% 5%;
+  grid-template-columns: 30% 2% 10% 2% 15% 1% 20% 10% 10%
 }
 .pricexcuantity {
   padding: 0.8%;
